# legalbench

./: .gitignore  export_prompts.py  pyproject.toml  test_import.py
legalbench/: __init__.py
legalbench/tasks/: __init__.py
